--- a/benchmarks/criterion/Cargo.toml
+++ b/benchmarks/criterion/Cargo.toml
@@ -15,3 +15,11 @@ harness = false
 criterion = "0.3.0"
 sled = { path = "../.." }
 jemallocator = "0.3.2"
+
+[dev-dependencies]
+persy = "0.9.0"
+tempfile = "3.1.0"
+
+[profile.release]
+lto = false
+codegen-units = 24
